all needful done

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,20 @@ plugins {
 apply plugin: 'kotlin-android'
 
 android {
+    signingConfigs {
+        debug {
+            storeFile file('D:\\SouthAfricanClinet\\SA_Assingment\\key_sa_assignment.jks')
+            keyAlias 'alias_sa'
+            storePassword 'adi@sa$2022'
+            keyPassword 'adi@sa$2022'
+        }
+        release {
+            storeFile file('D:\\SouthAfricanClinet\\SA_Assingment\\key_sa_assignment.jks')
+            storePassword 'adi@sa$2022'
+            keyPassword 'adi@sa$2022'
+            keyAlias 'alias_sa'
+        }
+    }
     compileSdk 32
 
     defaultConfig {
@@ -29,6 +43,8 @@ android {
                         "room.expandProjection":"true"]
             }
         }
+        signingConfig signingConfigs.release
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -73,6 +89,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:20.0.5'
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.6'
+    implementation 'com.google.firebase:firebase-auth:21.0.7'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -119,4 +136,7 @@ dependencies {
     implementation 'com.airbnb.android:lottie:5.2.0'
     implementation 'com.google.android.gms:play-services-safetynet:18.0.1'
     implementation 'androidx.browser:browser:1.3.0'
+
+    implementation platform('com.google.firebase:firebase-bom:30.3.1')
+    implementation 'com.google.firebase:firebase-auth-ktx'
 }
